# bedrock_supervisor

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
.devcontainer/: Dockerfile  devcontainer.json
bedrockd/: Cargo.toml  build.rs
bedrockd/src/: backup.rs  backup_manager.rs  cli.rs  config.rs  main.rs  management.rs  pid.rs  server.rs  server_manager.rs  wrapper.rs
daemon/: Cargo.toml
proto/: management.proto  rcon.proto
proto/rcon/v1/: rcon.proto
tui/: Cargo.toml
tui/src/: lib.rs  main.rs
tui/src/layout/: home_layout.rs  mod.rs
tui/src/state/: app_state.rs  backup_state.rs  home_state.rs  mod.rs  server_state.rs
tui/src/views/: home_view.rs  mod.rs  root_view.rs
