[workspace]
resolver = "2"
members = ["bedrockd", "tui"]

[workspace.dependencies]
tonic = "0.13.0"
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
#git2 = "0.20.1"
fork = "0.2.0"
clap = { version = "4.5.35", features = ["derive"] }
toml = "0.8.20"