[workspace]
resolver = "2"
members = ["bedrockd", "tui"]

[workspace.dependencies]
tonic = "*"
tonic-reflection = "*"
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
#git2 = "0.20.1"
fork = "0.2.0"
clap = { version = "4.5.35", features = ["derive"] }
toml = "0.8.20"
prost = "0.13.5"
tokio = { version = "1.44.1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "process",
] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
async-stream = "0.3.6"
fs2 = "*"
regex = "1.11.1"
flate2 = "*"
tar = "*"
