[package]
name = "bedrockd"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic.workspace = true
prost.workspace = true
fork.workspace = true
clap.workspace = true
toml.workspace = true
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
tokio.workspace = true
fs2.workspace = true

[build-dependencies]
tonic-build = "*"